Bug 1618678 - Make scrollbar style caching work on Android. r=heycam
Differential Revision: https://phabricator.services.mozilla.com/D65915

--- a/toolkit/themes/mobile/global/scrollbars.css
+++ b/toolkit/themes/mobile/global/scrollbars.css
@@ -20,6 +20,13 @@ xul|scrollbar {
   display: block;
 }
 
+/* We don't show resizers on android, so they may as well have
+ * pointer-events: none to simplify scrollbar caching */
+xul|resizer,
+xul|scrollcorner {
+  pointer-events: none;
+}
+
 xul|scrollbar[orient="vertical"] {
   min-width: 6px;
   max-width: 6px;
